# test-petsc-complex

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md  download_triangle.sh  ex19_mumps.sh  extract_tutorial.sh  install_triangle.sh  list.sh  petsc_test.sh  practice.sh  run.sh  run_dualspace_ex1.sh  run_dualspace_ex2.sh  run_fe_ex1.sh  run_fe_ex2.sh  run_fe_ex3.sh  setup_arch4edu.sh  start.sh  test.py  test.sh
.github/worflows/: arch4edu.yml
.github/workflows/: arch4edu.yml  archlinuxcn.yml  complex_mumps.yml  complex_superlu_dist.yml  mumps.yml  mumps_arch4edu.yml  mumps_archlinuxcn.yml  mumps_gklib_arch4edu.yml  mumps_metis_arch4edu.yml  mumps_scalapack_arch4edu.yml  mumps_scotch_arch4edu.yml  petsc4py_complex.yml  petsc4py_complex_mumps.yml  petsc4py_complex_superlu_dist.yml  petsc4py_real.yml  petsc4py_real_mumps.yml  petsc4py_real_superlu_dist.yml  real.yml  real_mumps.yml  real_mumps_arch4edu.yml  real_mumps_arch4edu_gklib.yml  real_mumps_arch4edu_metis.yml  real_mumps_arch4edu_scalapack.yml  real_mumps_archlinuxcn.yml  real_mumps_scotch_arch4edu.yml  real_superlu_dist.yml  real_superlu_dist_arch4edu.yml  real_superlu_dist_arch4edu_gklib.yml  real_superlu_dist_arch4edu_metis.yml  real_superlu_dist_archlinuxcn.yml  superlu_dist.yml  superlu_dist_arch4edu.yml  superlu_dist_archlinuxcn.yml  superlu_dist_gklib_arch4edu.yml  superlu_dist_metis_arch4edu.yml
demo/: CMakeLists.txt  LL_mumps.c
mumps_demo/: FindMUMPS.cmake
par_metis_scotch_demo/parmetis/: CMakeLists.txt
par_metis_scotch_demo/scotch/: CMakeLists.txt  LL_scotch.c
patches/: 0001-Enable-debugging.patch  0001-Start-debugging.patch  runex19_superlu_dist.diff  runex19_superlu_dist.patch
test/: CMakeLists.txt  README.md
test/cmake/: FindMUMPS.cmake
test/mumps/: CMakeLists.txt
test/scotch/: CMakeLists.txt  LL_scotch.c
(+4 files in other folders)
